--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,6 +27,8 @@
     <color name="teal_100">#CCFBF1</color>
     <color name="teal_500">#14B8A6</color>
     <color name="teal_600">#0D9488</color>
+    <color name="teal_400">#26A69A</color>
+
 
     <!-- Amber Colors (Accent/Priority) -->
     <color name="amber_50">#FFFBEB</color>
@@ -52,4 +54,6 @@
     <!-- Shadow Colors -->
     <color name="shadow_light">#10000000</color>
     <color name="shadow_dark">#30000000</color>
+
+
 </resources>
