--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,8 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
+    <color name="green_600">#16A34A</color>
+    <color name="orange_600">#EA580C</color>
 
     <!-- TSX Color Palette -->
     <!-- Backgrounds -->
